# Rust_CalcKernel

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  package.json
Ai_repository/: architecture-review-2026-07-01.md
benches/: ckc_perf.rs
docs/: ABI.md  CHECKED_ARITHMETIC.md  COMPILER_ARCHITECTURE.md  LANGUAGE_SPEC.md  LLVM_BACKEND.md  MIGRATION.md  MIGRATION_IK_TO_CK.md  MIR.md  NAMING_CONVENTIONS.md  OPTIMIZATION.md  PERFORMANCE.md  RELEASE_CHECKLIST.md  ROADMAP.md  WASM_ABI.md  architecture-review.md  ckc-outputs.md  native-release.md  npm-release.md  typescript-test-surface.json  wasm-interop.md
examples/: dijkstra.ck  explicit_casts.ck  llvm_bool.ck  llvm_memory.ck  llvm_scalar.ck  llvm_short_circuit.ck  pricing.ck  scalar.ck  scalar_calls_checked.ck  scalar_checked.ck  scalar_control_checked.ck  scalar_logical_checked.ck  wasm_calls.ck  wasm_control_flow.ck  wasm_scalar.ck
npm/: ckc.js  index.d.ts  index.js  platform.js
scripts/: audit-npm-release-workflow.mjs  audit-rust-replacement-readiness.mjs  audit-typescript-oracle-fixtures.mjs  audit-typescript-test-surface.mjs  build-npm-binary-matrix.mjs  cleanup-npm-package.mjs  prepare-npm-package.mjs  verify-declaration-parity.mjs  verify-host-npm-install.mjs  verify-npm-cutover-evidence.mjs  verify-npm-publish-artifact.mjs  verify-npm-publish-result.mjs  verify-npm-registry-replacement.mjs  verify-npm-release-signoff-summary.mjs  verify-npm-release-signoff.mjs  verify-npm-release.mjs  verify-public-api-parity.mjs  verify-typescript-oracle.mjs
src/: diagnostics.rs  lib.rs  main.rs  parser.rs  (+2 more)
(+72 files in other folders)
